tests/neg/i13701.scala
@main def Test() = String // error

